[package]
name = "garden"
version = "0.1.0"
authors = ["willyanfx"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "garden"
path = "src/main.rs"

[lib]
name = "lib_garden"
path = "src/lib.rs"


[dependencies]
color-eyre = "0.6.2"
structopt = "0.3.25"

[dev-dependencies]
assert_cmd = "2.0.2"
